<resources>
    <string name="app_name">Silent Moon</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Strings used for login/registration for navigation -->
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT? LOG IN</string>
    <string name="sign_in">LOG IN</string>
    <string name="dont_have_an_account">DONT HAVE AN ACCOUNT? SIGN UP</string>
    <string name="sign_up">SIGN UP</string>

    <!-- Strings used for the logo -->
    <string name="we_are_logo">We are what we do</string>
    <string name="meditation_text_logo">Thousand of people are using silent moon for smalls meditation</string>
    <string name="logo_for_greetings_screen">logo_for_greetings_screen</string>
    <string name="silent">Silent</string>
    <string name="moon">Moon</string>


    <!-- Strings used for first registration section -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="facebook_button_label">CONTINUE WITH FACEBOOK</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_label">Email address</string>
    <string name="password_label">Password</string>
    <string name="login_email_label">OR LOG IN WITH EMAIL</string>


    <!-- Strings used for the second registration section -->
    <string name="forgot_password_toast">That very bad!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_your_account">Create your account</string>
    <string name="or_sign_up_with_email">OR SIGN UP WITH EMAIL</string>
    <string name="your_name">Your name</string>
    <string name="get_started">GET STARTED</string>
    <string name="hi_yuriy_welcome_to_silent_moon">Hi Yuriy, Welcome to Silent Moon</string>
    <string name="silent_moon_span">to Silent Moon</string>
    <string name="explore_the_app_find_some_peace_of_mind_to_prepare_for_meditation">Explore the app, Find some peace of mind to prepare for meditation.</string>

    <!-- Strings used for onboarding fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reduce_anxiety">Reduce anxiety</string>
    <string name="what_brings_you_to_silent_moon">What Brings you\nto Silent Moon?</string>
    <string name="choose_a_topic_to_focuse_on">choose a topic to focuse on:</string>
    <string name="welcome_to_sleep">Welcome to Sleep</string>
    <string name="welcome_to_sleep_description">Explore the new king of sleep. It uses sound and visualization to create the perfect conditions for refreshing sleep</string>
    <string name="night_island_label">Night Island</string>
    <string name="sleep_music_label">Sleep Music</string>
    <string name="sleep_title_label">Sleep Stories</string>
    <string name="meditate_label">Meditate</string>
    <string name="sleep_music_desc">SLEEP MUSIC</string>
    <string name="sleep_title_desc">Soothing bedtime stories to help you fall\ninto a deep and natural sleep</string>
    <string name="meditate_desc">We can learn to recognize when our mind is performing its normal daily acrobatics.</string>
    <string name="all_categories_label">All</string>
    <string name="ocean_moon_button_label">START</string>
    <string name="ocean_moon_image">Ocean moon image</string>
    <string name="ocean_moon_desc">Non-stop 8-hour mixes of our\nmost popular sleep audio</string>
    <string name="the_ocean_moon_label">The Ocean Moon</string>
    <string name="sleep_card_description">45 MIN • SLEEP MUSIC</string>
    <string name="home_card_desc">MEDITATION • 3-10 MIN</string>
    <string name="daily_card_description">APR 30 • PAUSE PRACTICE</string>
    <string name="sleep_details_label">Night Island</string>
    <string name="sleep_details_desc">Ease the mind into a restful night’s sleep with\nthese deep, ambient tones.</string>
    <string name="favourites_count">24.234 Favourites</string>
    <string name="favoured_increased">24.235 Favourites</string>
    <string name="listen_count">34.234 Listening</string>
    <string name="listen_increased">34.235 Listening</string>
    <string name="related_label">Related</string>
    <string name="play_label">PLAY</string>
    <string name="music_start_value">00:00</string>
    <string name="music_end_value">45:00</string>
    <string name="daily_calm_label">Daily Calm</string>
    <string name="meditation_label">7 Days of Calm</string>


    <!-- Strings used for the meditation category -->
    <string name="calm_days_label">7 Days of Calm</string>
    <string name="anxiety_label">Anxiety Release</string>
    <string name="daily_reflection_label">Daily Reflections</string>
    <string name="embracing_label">Embracing Stillness</string>
    <string name="course_label">COURSE</string>
    <string name="course_description">Ease the mind into a restful night’s sleep with these deep, ambient tones.</string>
    <string name="male_voice_tab">MALE VOICE</string>
    <string name="female_voice_tab">FEMALE VOICE</string>


    <!-- Strings used for course_item -->
    <string name="focus_attention">Focus Attention</string>
    <string name="course_item_duration">10 MIN</string>
    <string name="body_scan">Body Scan</string>
    <string name="body_scan_duration">5 MIN</string>
    <string name="make_happiness">Making Happiness</string>
    <string name="make_happiness_duration">3 MIN</string>
    <string name="self_compassion">Self compassion</string>
    <string name="self_compassion_duration">4 MIN</string>
    <string name="mindful_breathing">Mindful breathing</string>
    <string name="mindful_breathing_duration">6 MIN</string>
    <string name="loving_kindness">Loving kindness</string>
    <string name="loving_kindness_duration">7 MIN</string>
    <string name="pick_narrator">Pick a Narrator</string>
    <string name="light_sleep_desc">7 DAYS OF CALM</string>



    <!-- Strings used for the home fragment -->
    <string name="home_label">Good Morning, Yuriy</string>
    <string name="home_description">We wish you have a good day</string>
    <string name="focus_card_label">Focus</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="basic_course">Basics</string>
    <string name="course">COURSE</string>
    <string name="start">START</string>
    <string name="_3_10_min">3-10 MIN</string>
    <string name="relaxation">Relaxation</string>
    <string name="music">MUSIC</string>
    <string name="sleep_bottom">Sleep</string>
    <string name="home_bottom">Home</string>
    <string name="meditate_bottom">Meditate</string>
    <string name="music_bottom">Music</string>
    <string name="yuriy_bottom">Yuriy</string>
    <string name="you_want_some_music">Time to relax and forget about stress!</string>
    <string name="listen_music">Listen music!</string>
    <string name="happiness_card_label">Happiness</string>
    <string name="hello">Hello</string>

    <!-- Strings used for the time fragment -->
    <string name="meditate_time">What time would you\nlike to meditate?</string>
    <string name="timepicker_desc">Any time you can choose but We\nrecommend first thing in th morning.</string>
    <string name="meditate_day">Which day would you\nlike to meditate?</string>
    <string name="day_desc">Everyday is best, but we recommend picking at least five.</string>
    <string name="sunday_chip_label">SU</string>
    <string name="monday_chip_label">M</string>
    <string name="thursday_chip_label">T</string>
    <string name="wednesday_chip_label">W</string>
    <string name="tuesday_chip_label">TH</string>
    <string name="friday_chip_label">F</string>
    <string name="saturday_chip_label">S</string>
    <string name="no_thanks_text">NO THANKS</string>
    <string name="daily_thought_label">Daily Thought</string>

    <!-- Strings used for the registartion fragment -->
    <string name="private_policy">I HAVE READ THE PRIVATE POLICY</string>
    <string name="spannable_policy">PRIVATE POLICY</string>
    <string name="policy_toast">Тут будет политика конфиденциальности</string>


</resources>