<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home_bottom" />

    <item
        android:id="@+id/navigation_sleep"
        android:icon="@drawable/sleep_icon"
        android:title="@string/sleep_bottom" />

    <item
        android:id="@+id/navigation_meditate"
        android:icon="@drawable/meditate_icon"
        android:title="@string/meditate_bottom" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/music_icon"
        android:title="@string/music_bottom" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/yuriy_bottom" />
</menu>